[EFL][WK2] Writing immediately to created windows (open) fails https://bugs.webkit.org/show_bug.cgi?id=105276

Reviewed by Kenneth Rohde Christiansen.

Do not reset 'about:blank' url for the new pages in mini browser.

* MiniBrowser/efl/main.c:
(window_create):

Canonical link: https://commits.webkit.org/124751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139303 268f45cc-cd09-0410-ab3c-d52691b4dbfc